new proj/src/objects/R_Meeting__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Std_Inv_Mile__c</fullName>
        <label>Standard Invoice Milestones ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_StrentPrpsl__c</fullName>
        <label>Any Strengths/Red Flags in the Proposal?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Strtegy_Win__c</fullName>
        <inlineHelpText>What&apos;s the Value Story that Sales wants ITO to define in the Proposal? What format of Proposal? What should be included to WIN the job?</inlineHelpText>
        <label>Strategy to Win ?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_TCP_File__c</fullName>
        <label>TCP discussed and file created?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Tech_Attend__c</fullName>
        <label>Technology</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Tech_Compli__c</fullName>
        <label>Complete Tech Table of Compliance ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_Bid_Due_Date__c</fullName>
        <formula>Opportunity__r.GE_ES_Bid_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bid Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_Buyer_KYC_Status__c</fullName>
        <formula>IF(Opportunity__r.Account.GE_HQ_KYC_Complete__c ,&apos;Completed&apos;,&apos;Not Completed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer KYC Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Buyer__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_GE_Region__c</fullName>
        <formula>GE_OG_GS_DealMgnt__r.GE_Tier1_IRegion__c</formula>
        <label>GE O&amp;G Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_EPC_KYC_Status__c</fullName>
        <formula>if(Opportunity__r.GE_OG_TM_EPC__r.GE_HQ_KYC_Complete__c,&apos;Completed&apos;,&apos;Not Completed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EPC KYC Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_EPC__c</fullName>
        <formula>Opportunity__r.GE_OG_TM_EPC__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EPC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_End_User__c</fullName>
        <formula>Opportunity__r.GE_OG_Oppty_End_User__r.Name</formula>
        <label>End User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_GS_DealMgnt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Management</label>
        <referenceTo>GE_ES_Deal_Management__c</referenceTo>
        <relationshipLabel>R Meetings</relationshipLabel>
        <relationshipName>R_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Installation_Country__c</fullName>
        <formula>TEXT(Opportunity__r.GE_OG_Install_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_MCS_Bid_Due_Date__c</fullName>
        <inlineHelpText>If you leave this field empty, Salesforce will copy the date from your opportunity when you hit Save.</inlineHelpText>
        <label>Bid Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_MCS_Customer_Want_Date__c</fullName>
        <inlineHelpText>If you leave this field empty, Salesforce will copy the date from your opportunity when you hit Save.</inlineHelpText>
        <label>Customer Want Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_MCS_Proposal_Stamp_Date__c</fullName>
        <label>Proposal Stamp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_MCS_R1_Submitted_Date__c</fullName>
        <label>R1 Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_MCS_R2_Complete_Date__c</fullName>
        <label>R2 Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_MCS_Revision_Number__c</fullName>
        <label>Revision Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Market_Segment__c</fullName>
        <formula>TEXT(Opportunity__r.GE_OG_TM_Industrial_Sector__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_PII_Meet_Ty__c</fullName>
        <description>This Field is used only for OG PII</description>
        <label>Meeting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Deal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bid Strategy Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Booking Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTR Handover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Booking Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Plant_Type__c</fullName>
        <formula>TEXT(Opportunity__r.GE_OG_TM_Subsector__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plant Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Product_Management__c</fullName>
        <label>Product Management</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Project_End_User_KYC_Status__c</fullName>
        <formula>IF(Opportunity__r.GE_ES_Project__r.GE_ES_End_User__r.GE_HQ_KYC_Complete__c ,&apos;Completed&apos;,&apos;Not Completed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project End User KYC Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Project_End_User__c</fullName>
        <formula>Opportunity__r.GE_ES_Project__r.GE_ES_End_User__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project End User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Project_Id__c</fullName>
        <formula>Opportunity__r.GE_ES_Project__r.GE_ES_Project_ID2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Project_Name__c</fullName>
        <formula>Opportunity__r.GE_ES_Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_R1_Date__c</fullName>
        <formula>Opportunity__r.GE_OG_TM_R1_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_RFQ_arrival_date__c</fullName>
        <formula>Opportunity__r.GE_OG_TM_RFQ_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFQ arrival date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_Request_Date__c</fullName>
        <inlineHelpText>When Sales Requested Proposal ?</inlineHelpText>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_Risk_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R_Meetings4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Scope_Description__c</fullName>
        <label>Scope Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TMVL_BCC_Multipoint_delivery_check__c</fullName>
        <label>VL/BCC/ Multipoint delivery check</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_231_Law_compliance__c</fullName>
        <label>231 Law compliance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Authorized_by__c</fullName>
        <label>Authorized by</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Bonds_details__c</fullName>
        <label>Bonds details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Brief_Project_Overview__c</fullName>
        <label>Brief Project Overview</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Commercial_Strategy__c</fullName>
        <label>Commercial Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>FA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE STD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation From Scratch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Could_the_scope_include_TD_CCs__c</fullName>
        <label>Could the scope include TD CCs?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Describe_Performance_guarantees__c</fullName>
        <label>Describe Performance guarantees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_EHS_issues__c</fullName>
        <label>EHS issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Electric_Generators_in_Scope__c</fullName>
        <inlineHelpText>If there are motors or electric generators in scope can they be supplied by GEVISA?</inlineHelpText>
        <label>Electric Generators in Scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Emissions__c</fullName>
        <label>Emissions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Extension_Agreed_Date__c</fullName>
        <label>Extension Agreed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Extension_reason__c</fullName>
        <label>Extension reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_FOB_or_FAS_Delivery__c</fullName>
        <inlineHelpText>In case of FOB or FAS delivery, is the port of delivery defined as Livorno or Massa for Italy delivered goods?</inlineHelpText>
        <label>FOB or FAS Delivery</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_FtoF_Material_Selection__c</fullName>
        <inlineHelpText>FtoF Material Selection consistent w/ process fluid characteristics</inlineHelpText>
        <label>FtoF Material Selection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Guaranteed_Expected_Noise__c</fullName>
        <label>Guaranteed/Expected Noise</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Impeller_Peripheral_Speed__c</fullName>
        <inlineHelpText>Impeller Peripheral Speed consistent w/ material strength</inlineHelpText>
        <label>Impeller Peripheral Speed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_LDs_structure_Make_Good__c</fullName>
        <label>LDs structure / Make Good</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Manufacturability_constraints__c</fullName>
        <label>Manufacturability constraints</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Mitigations_Validity__c</fullName>
        <label>Mitigations Validity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_OSO_PSO_CSO_status_check__c</fullName>
        <label>OSO, PSO, CSO status check</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Other_Regions_support__c</fullName>
        <label>Other Regions support</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Payment_structure__c</fullName>
        <label>Payment structure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Presenter__c</fullName>
        <label>Presenter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Product_Compliance_Evaluation__c</fullName>
        <inlineHelpText>Does a Product Compliance Evaluation (PCE) exist for the region/country in which you are bidding?</inlineHelpText>
        <label>Product Compliance Evaluation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Product_Compliance_Specificatio__c</fullName>
        <inlineHelpText>Does a Product Compliance Specification (PBCS) exist for your product/offering?</inlineHelpText>
        <label>Product Compliance Specification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_QCP_Confirmation__c</fullName>
        <label>QCP Confirmation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_RAC_expected_date__c</fullName>
        <label>RAC expected date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Required_Attendees__c</fullName>
        <label>Required Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Slots_availability__c</fullName>
        <label>Slots availability</label>
        <picklist>
            <picklistValues>
                <fullName>FtoF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor/Gear/Generator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spare rotors or other manufactured spares</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_TOTAL__c</fullName>
        <label>TOTAL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Tech_Docum_Language__c</fullName>
        <inlineHelpText>Is there any issue on tech docum. Language? 
Highlight if different from English or Italian (for NP) or French (for TD)</inlineHelpText>
        <label>Tech Docum Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Technical_Frame_agreements__c</fullName>
        <inlineHelpText>Is one of the existing technical Frame agreements, applicable to this project?</inlineHelpText>
        <label>Technical Frame agreements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Technical_Scope_Description__c</fullName>
        <label>Technical Scope Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Trimming__c</fullName>
        <label>Trimming</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Urgent_need_for_Visa__c</fullName>
        <inlineHelpText>Is there any urgent need for Visa?In Case of installation included in the Contract, has been the required Visa need taken into consideration?</inlineHelpText>
        <label>Urgent need for Visa</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_VDR_confirmation__c</fullName>
        <label>VDR confirmation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Visas_for_meetings_or_FSE__c</fullName>
        <inlineHelpText>Does the project require Visas for meetings or FSE?</inlineHelpText>
        <label>Visas for meetings or FSE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PWNU_MetngTyp__c</fullName>
        <label>Meeting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Go/No-Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bid/No-Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kick-off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO CRB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3/R4 Hand-off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PWNU_RiskMod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Module</label>
        <referenceTo>GE_PW_Risk_Module__c</referenceTo>
        <relationshipLabel>R Meetings</relationshipLabel>
        <relationshipName>R_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PWRE_Add_Info__c</fullName>
        <inlineHelpText>Indicate what you are asking for, special requests, other R-participants required (non-Sales/Commops), etc...</inlineHelpText>
        <label>Additional Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PWRE_IfWindSer__c</fullName>
        <inlineHelpText>For wind services R-meetings only, please indicate offering type.</inlineHelpText>
        <label>Wind Services</label>
        <picklist>
            <picklistValues>
                <fullName>New Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed Base</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PWRE_RRvwTime__c</fullName>
        <label>Scheduled R-Review Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PWRE_TimeReq__c</fullName>
        <label>Time Required (mins)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Commercial_Operations_Pole_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Operations Pole Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R_Meetings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PW_Next_R_Date__c</fullName>
        <label>Next R Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_R_Decision__c</fullName>
        <label>R Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved pending action items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decided “No-Bid”</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected – to be rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Requested_Meeting_Time__c</fullName>
        <inlineHelpText>Requested Meeting Time US Eastern in HH.MM format</inlineHelpText>
        <label>Requested Meeting Time (R2/R3 Only)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>&quot;Person who will be confirming that this opportunity is ready for the R review &amp; scheduling the R meeting in the R Calendar&quot;.</inlineHelpText>
        <label>Sales Manager</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND (6 OR 7))</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>GE_OG_PII Comm Ops,GE_OG_PII Reviewer,GE_OG_PII Sales Manager,GE_OG_PII Superuser</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>GE OG TM R Meeting</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>GE OG TM R Meeting</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>GE_OG_TM Admin,GE_OG_TM AE,GE_OG_TM ComOps,GE_OG_TM Comops Installation,GE_OG_TM GM,GE_OG_TM Jolly,GE_OG_TM MKTG,GE_OG_TM Risk Approver,GE_OG_TM Risk Manager,GE_OG_TM Sales</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>GE OG D&amp;P R Meeting</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>GE_OG_DS Business Intelligence,  GE_OG_DS Com Ops,  GE_OG_DS Marketing,  GE_OG_DS Risk Approver,  GE_OG_DS Risk Manager,  GE_OG_DS Sales,  GE_OG_DS_CSR,  GE_OG_DS_Superuser</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>GE_OG_SS Business Intelligence,  GE_OG_SS Com Ops,  GE_OG_SS Finance,  GE_OG_SS Marketing,  GE_OG_SS Risk Approver,  GE_OG_SS Risk Manager,  GE_OG_SS Sales,  GE_OG_SS_Superuser</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>R_Meetings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PW_Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>(GMT+14:00) Line Is. Time (Pacific/Kiritimati)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+13:00) Phoenix Is. Time (Pacific/Enderbury)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+13:00) Tonga Time (Pacific/Tongatapu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+12:45) Chatham Standard Time (Pacific/Chatham)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+12:00) Petropavlovsk-Kamchatski Summer Time (Asia/Kamchatka)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+12:00) New Zealand Standard Time (Pacific/Auckland)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+12:00) Fiji Time (Pacific/Fiji)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+11:30) Norfolk Time (Pacific/Norfolk)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+11:00) Solomon Is. Time (Pacific/Guadalcanal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+10:30) Lord Howe Standard Time (Australia/Lord_Howe)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+10:00) Eastern Standard Time (Queensland)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+10:00) Eastern Standard Time (New South Wales)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+09:30) Central Standard Time (South Australia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+09:30) Central Standard Time (Northern Territory)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+09:00) Korea Standard Time (Asia/Seoul)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+08:00) Hong Kong Time (Asia/Hong_Kong)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+08:00) Philippines Time (Asia/Manila)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+08:00) China Standard Time (Asia/Shanghai)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+08:00) Singapore Time (Asia/Singapore)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+08:00) China Standard Time (Asia/Taipei)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+08:00) Western Standard Time (Australia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+07:00) Indochina Time (Asia/Bangkok)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+07:00) West Indonesia Time (Asia/Jakarta)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+07:00) Indochina Time (Asia/Saigon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+06:30) Myanmar Time (Asia/Rangoon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+06:00) Bangladesh Summer Time (Asia/Dacca)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+05:45) Nepal Time (Asia/Katmandu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+05:30) India Standard Time (Asia/Calcutta)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_WE_Bid_Level__c</fullName>
        <inlineHelpText>A - Firm offer based on full review of official invitation to bid incl. prep of comments/deviations
C - Firm offer based on Customer Ts&amp;Cs
S - Firm offer based on GE Ts&amp;Cs
X - Budgetary offer based on GE Ts&amp;Cs
I - Pre-ITO support, no offer required</inlineHelpText>
        <label>Bid Level</label>
        <picklist>
            <picklistValues>
                <fullName>A-Full Tender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Customized Firm Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Standard Firm Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-Budgetary Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intial Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_WE_Priority__c</fullName>
        <inlineHelpText>1 =&gt; TOP Priority
2 =&gt; HIGH Priority
3 =&gt; STANDARD Priority</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Notes__c</fullName>
        <label>Meeting Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Buyer__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Buyer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>R Meetings</relationshipLabel>
        <relationshipName>R_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>